--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -115,6 +115,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Battle.h" />
+    <ClInclude Include="EnemyGroup.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Role.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="GameV1.0.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
