--- a/Project1/Project1.vcxproj
+++ b/Project1/Project1.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{DB7FB9A6-94AC-458A-A32A-B2A2969B8C65}</ProjectGuid>
     <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <ProjectName>GameV1.0</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
